기존 뷰 수정 및 인벤토리 뷰 추가, 중첩 리사이클러뷰 스크롤 오류 수정 완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">시리즈 모아보기</string>
+
+    <string name="home_title">시리즈 모아보기</string>
+
+    <string name="inventory_title">보고싶은 시리즈</string>
+
+    <string name="add_series">보고싶어요</string>
+    <string name="series_videos_info_title">회차정보</string>
 </resources>
