--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
-    <string name="app_name">시리즈 모아보기</string>
+    <string name="app_name">시리즈 컬렉션</string>
 
-    <string name="home_title">시리즈 모아보기</string>
+    <string name="home_title">시리즈 컬렉션</string>
 
     <string name="inventory_title">보고싶은 시리즈</string>
 
     <string name="add_series">보고싶어요</string>
     <string name="series_videos_info_title">회차정보</string>
+    <string name="added_series_to_inventory">시리즈를 추가했습니다.</string>
+    <string name="removed_series_from_inventory">시리즈를 제거했습니다.</string>
+
 </resources>
