feat: 검색화면 viewpager 레이아웃 및 어댑터 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="added_series_to_inventory">시리즈를 추가했습니다.</string>
     <string name="removed_series_from_inventory">시리즈를 제거했습니다.</string>
 
+    <string name="all_filter_title">전체</string>
+    <string name="travel_filter_title">여행</string>
+    <string name="fiction_filter_title">픽션</string>
+
 </resources>
