--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="travel_filter_title">여행</string>
     <string name="fiction_filter_title">픽션</string>
 
+    <string name="search_query_hint">시리즈 이름을 검색해주세요..</string>
+
 </resources>
